# rsync-rs-poc

./: .gitignore  Cargo.toml  README.md
src/: chksum.rs  envelope.rs  file_list.rs  filter.rs  generator.rs  main.rs  opts.rs  recv.rs  uid_list.rs
